add missing files

--- a/Services/ChatBot.Api/src/ChatBot.Api/appsettings.json
+++ b/Services/ChatBot.Api/src/ChatBot.Api/appsettings.json
@@ -45,6 +45,6 @@
   },
   "BotConfiguration": {
     "BotToken": "2143094741:AAEBNHpKq5tDfyAwGnMD1YYo4zcmgCIMMPY",
-    "HostAddress": "https://d1c1-42-60-1-21.ngrok.io"
+    "HostAddress": "https://457c-42-60-1-21.ngrok.io"
   }
 }
